# divine_procurement

./: .env.example  .gitignore  docker-compose.yml  manifest
.beads/: metadata.json
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 049c3878aa91_supplier_candidates.py  0a840e6283b5_add_components_table.py  2c8015d45dce_add_suppliers_and_supplier_categories_.py  38b82a5a9d7f_initial_schema.py  93923e653bbf_add_users_table.py  c0ff81156b6a_add_categories_table.py  d72639185693_add_jobs_table.py
backend/app/: config.py  main.py
backend/app/auth/: deps.py  models.py  router.py  schemas.py  service.py
backend/app/categories/: models.py  router.py  schemas.py  service.py
backend/app/components/: models.py  router.py  schemas.py  service.py
backend/app/jobs/: discovery.py  models.py  router.py  schemas.py  service.py  worker.py
backend/app/public_suppliers/: router.py
backend/app/supplier_candidates/: models.py  router.py  schemas.py  service.py
backend/app/suppliers/: models.py  router.py  schemas.py  service.py
backend/scripts/: bootstrap_admin.py  reset_password.py
backend/tests/: conftest.py  test_auth.py  test_categories.py  test_components.py  test_db.py  test_discovery.py  test_jobs.py  test_supplier_candidates_api.py  test_suppliers.py
docs/superpowers/plans/: 2026-04-07-phase-1-foundation.md  2026-04-07-phase-2-supplier-discovery-agent.md
docs/superpowers/specs/: 2026-04-07-procurement-service-design.md
frontend/app/categories/: page.tsx
(+14 files in other folders)
