[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "procurement-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "arq>=0.25",
    "openai>=1.40",
    "httpx>=0.27",
    "tavily-python>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "anyio>=4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
